--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,5 @@
-<%= form_for :post, url: posts_path do |f| %>
+<div id="page_wrapper">
+  <%= form_for :post, url: posts_path do |f| %>
 
   <p>
     <%= f.label :title, "Title" %> <br>
@@ -13,3 +14,4 @@
   <%= f.submit "Add Post", :disable_with => 'Adding...' %>
 
 <% end %>
+</div>
