--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,6 @@
 <div id="page_wrapper">
-  <h1>Add New Post</h1>
-  <%= form_for :post, url: posts_path do |f| %>
+  <h1>Edit Post</h1>
+  <%= form_for @post do |f| %>
 
   <% if @post.errors.any? %>
     <div id="errors">
