--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
       <ul>
         <li class="categroy">Website</li>
         <li><%= link_to 'Blog', root_path %></li>
-        <li>About</li>
+        <li><%= link_to 'About', about_path %></li>
       </ul>
 
       <ul>
@@ -33,7 +33,13 @@
       <!-- MAIN CONTENT -->
       <div id="main_content">
         <div id="header">
-          <p>All Posts</p>
+          <% if current_page? (root_path) %>
+              <p>All Posts</p>
+            <% elsif current_page? (about_path) %>
+              <p>About Me</p>
+            <% else %>
+              <p><%= link_to 'Back to All Posts', root_path %></p>
+          <% end %>
 
           <div class="buttons">
             <%= link_to 'New Post', new_post_path, class: 'button' %>
